# dj_site_accounts

./: .gitignore  LICENSE  MANIFEST.in  manage.py  pyproject.toml  requirements.txt  setup.cfg
dj_site_accounts/authentication/: apps.py  backends.py  forms.py  mixins.py  models.py
dj_site_accounts/authentication/templates/dj_site_accounts/authentication/: base.html
dj_site_accounts/authentication/templates/dj_site_accounts/authentication/partials/: _form_errors.html  _head.html  _page_header.html  _scripts.html  (+2 more)
dj_site_accounts/authentication/templates/dj_site_accounts/emails/: base.html  email_confirmation.html
dj_site_accounts/authentication/templatetags/: auth.py  get_lang.py
dj_site_accounts/authentication/tests/: apps.py  factories.py  forms.py  mocks.py  models.py
dj_site_accounts/authentication/tests/migrations/: 0001_initial.py
dj_site_accounts/authentication/views/: site.py
dj_site_accounts/common/: utils.py
dj_site_accounts/sites_profiles/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
dj_site_accounts/sites_profiles/migrations/: 0001_initial.py
dj_site_accounts/sites_profiles/templates/dj_site_accounts/sites_profiles/: _modals.html  _site_details.html  _site_list.html  form.html  index.html
dj_site_accounts/sites_profiles/tests/tests_sites_profiles/: apps.py  test_forms.py  test_models.py  test_signals.py  test_urls.py  test_views.py
site_accounts/: asgi.py  settings.py  urls.py  wsgi.py
site_accounts/config/: .env.example  apps.py  auth.py  database.py  email.py  locale.py  main.py  middleware.py  templates.py
(+18 files in other folders)
