[metadata]
name = django_base_template
description = Django package provides easy configuration admin template
long_description_content_type = text/markdown
author = Sohype Khaled
author_email = sohype.mop@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir =
    = src
packages = find:

include_package_data = true
python_requires = >=3.8

[options.packages.find]
where = src
